[gd_scene load_steps=13 format=3 uid="uid://b04vrc36tl1i8"]

[ext_resource type="Script" uid="uid://oy8feoe0gmoc" path="res://Tools/ui.gd" id="1_fjl6q"]
[ext_resource type="Texture2D" uid="uid://18j0cdxylxdj" path="res://Icons/Screenshot 2025-06-03 000809.png" id="2_1kjk6"]
[ext_resource type="Texture2D" uid="uid://ov1oy7m2x5ua" path="res://Icons/Screenshot 2025-06-03 001205.png" id="3_sol5x"]
[ext_resource type="Texture2D" uid="uid://dgqwc8w18ur3n" path="res://Icons/Screenshot 2025-06-03 001011.png" id="4_04tlv"]
[ext_resource type="Texture2D" uid="uid://cmdsr38km37w1" path="res://Icons/Screenshot 2025-06-03 001408.png" id="5_rbu2p"]
[ext_resource type="Texture2D" uid="uid://dngn6uc0gw5em" path="res://Icons/photo_2025-05-30_16-57-10.jpg" id="6_04tlv"]
[ext_resource type="Texture2D" uid="uid://pdjwjeisco7x" path="res://Icons/photo_2025-05-30_16-55-18.jpg" id="7_rbu2p"]

[sub_resource type="LabelSettings" id="LabelSettings_fjl6q"]
font_size = 48
font_color = Color(0, 1, 0.243137, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_il2mn"]
font_size = 48
font_color = Color(1, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mhbxn"]
font_size = 48
font_color = Color(1, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1kjk6"]
font_size = 72
font_color = Color(0, 1, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_sol5x"]
font_size = 24
font_color = Color(0.800491, 0.800491, 0.800491, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fjl6q")

[node name="Weapons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ItemList" type="ItemList" parent="Weapons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -92.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
auto_width = true
auto_height = true
item_count = 4
max_columns = 4
fixed_icon_size = Vector2i(100, 100)
item_0/icon = ExtResource("2_1kjk6")
item_1/icon = ExtResource("3_sol5x")
item_2/icon = ExtResource("4_04tlv")
item_3/icon = ExtResource("5_rbu2p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.95
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.05
offset_left = -77.0
offset_bottom = 45.0
grow_horizontal = 0

[node name="Money" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_fjl6q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dollar" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "$"
label_settings = SubResource("LabelSettings_fjl6q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money2" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "-20"
label_settings = SubResource("LabelSettings_il2mn")

[node name="Dollar2" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "$"
label_settings = SubResource("LabelSettings_mhbxn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="GameOver"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_04tlv")

[node name="TextureRect2" type="TextureRect" parent="GameOver"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_rbu2p")

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -11.5
offset_right = 64.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "БЛАБЛАБЛАБЛА"
label_settings = SubResource("LabelSettings_1kjk6")

[node name="Label2" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
text = "(нажмите не пробел чтобы продолжить)"
label_settings = SubResource("LabelSettings_sol5x")

[connection signal="item_selected" from="Weapons/ItemList" to="." method="_on_item_list_item_selected"]
